welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet(int i) {do {
    avance()
} while (!estSurBiscuit)
prendBiscuit
forward(i)
poseBiscuit
}

for (i <- 1 to 7) {
    goAndGet(i);
    right();
    forward();
    left();
}
